feat: Add swipe gesture support for scene navigation and update UI instructions.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="ui">
         <h1 id="mode-name">Antigravity</h1>
-        <p>Use &larr; &rarr; keys to switch modes</p>
+        <p>Use &larr; &rarr; keys or Swipe to switch modes</p>
     </div>
     <canvas id="canvas"></canvas>
     <script src="animation.js"></script>
